<resources>

    <string name="app_name">Music App</string>

    <string name="select">Select a Genre</string>

    <string name="country">Country</string>

    <string name="jazz">Jazz</string>

    <string name="instrumental">Instrumental</string>

    <string name="pop">Pop</string>
    <string name="back">backbutton</string>
    <string name="play">playbutton</string>
    <string name="stop">stopbutton</string>

</resources>