<?xml version="1.0" encoding="utf-8"?>

<!-- The main screen that welcomes the user and asks them to pick
a category of music depending on what they need the music to help them with -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.musicapp.MainActivity">

        <TextView
            android:id="@+id/selection"
            style="@style/selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/select" />
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Country"
                style="@style/category"
                android:background="@color/colorPrimary"
                android:text="@string/country" />

            <TextView
                android:id="@+id/Instrumental"
                style="@style/category"
                android:background="@color/colorPrimary"
                android:text="@string/jazz" />

            <TextView
                android:id="@+id/Jazz"
                style="@style/category"
                android:background="@color/colorPrimary"
                android:text="@string/instrumental" />

            <TextView
                android:id="@+id/Pop"
                style="@style/category"
                android:background="@color/colorPrimary"
                android:text="@string/pop" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>